--- a/2106.04070/programmable.tex
+++ b/2106.04070/programmable.tex
@@ -1,5 +1,27 @@
-\documentclass[aps,pra,twocolumn,superscriptaddress]{revtex4-1} %twocolumn
+\documentclass[aps,pra,superscriptaddress,12pt]{revtex4-1} %twocolumn
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
 \input{AuxTexFiles/preamble}
 
 \begin{document}
@@ -22,10 +44,11 @@ Interactions govern the flow of information and the formation of correlations in
 
 
 \end{abstract}
-\date{\today}
+\date{8 June 2021 }
 
 
 \maketitle
+\newpage
 
 Driving matter with light offers a powerful approach to engineering quantum mechanical systems \cite{rudner2020band,kennedy2015observation,aidelsburger2015measuring,struck2013engineering,vaidya2018tunable,islam2013emergence,jurcevic2014quasiparticle,fausti2011light,wang2013observation,leroux2010implementation,barontini2015deterministic,bohnet2016quantum,hosten2016measurement,welte2018photon,pedrozo2020entanglement,davis2019photon,davis2020protecting,muniz2020exploring,leonard2017supersolid}.  In electronic materials \cite{fausti2011light,wang2013observation} and in artificial materials composed of trapped atoms in quantum simulators \cite{rudner2020band,kennedy2015observation,aidelsburger2015measuring,struck2013engineering,vaidya2018tunable}, optical driving allows for controlling transport properties, interactions, and correlations.  For atoms in optical cavities \cite{vaidya2018tunable} or trapped-ion qubits \cite{islam2013emergence,jurcevic2014quasiparticle}, photons or phonons can mediate interactions of tunable range.  Experiments have investigated the influence of the range of interactions on the growth of quantum correlations \cite{islam2013emergence,jurcevic2014quasiparticle} and harnessed infinite-range interactions to generate collective entangled states \cite{leroux2010implementation,barontini2015deterministic,bohnet2016quantum,hosten2016measurement,welte2018photon,pedrozo2020entanglement}.  All-to-all interactions mediated by light have furthermore enabled quantum simulations of phenomena ranging from supersolidity \cite{leonard2017supersolid} to dynamical phase transitions \cite{muniz2020exploring}.
 
@@ -33,7 +56,13 @@ Yet many objectives in quantum simulation and computation demand more versatile 
 %Adopting this approach, we demonstrate applications to inducing frustration and to manipulating the effective dimensionality, topology, and geometry of a quantum many-body system.
 
 
-\begin{figure*}
+We realize programmable spin-exchange interactions in an array of atomic ensembles within an optical cavity.  Our scheme, illustrated in Fig.~\ref{fig:overview}, produces a class of spin models described by an effective Hamiltonian
+\begin{equation}
+H_{\text{eff}} = -\sum_{\mu,\nu} J(r_{\mu\nu}) f^+_\mu f^-_\nu + H_q. %q\sum_{\mu} \left(f^z_\mu\right)^2.
+\label{eq:Heff}
+\end{equation} Here, $f^{+(-)}_\mu$ denotes the raising (lowering) operator for the Zeeman spin of atom $\mu$, the distance between atoms is $r_{\mu\nu}$, and $H_q$ represents the quadratic Zeeman energy.  The spin-exchange coupling $J$ arises from a process in which one atom flips its spin down while scattering a photon from a drive field into the cavity and a second atom rescatters this photon to flip its spin up \cite{davis2019photon,davis2020protecting}. We focus on a system of spin-1 atoms initialized in the $m=0$ Zeeman state, where the effect of this ``flip-flop'' interaction is to produce correlated atom pairs in states $m=\pm 1$ \cite{masson2017cavity,davis2019photon,hamley2012spin}.
+
+\begin{figure*}[t]
 \includegraphics[width=\textwidth]{Figures/Figure1.pdf}
 \caption{\textbf{Engineering distance-dependent interactions.} 
 \textbf{a} An array of atomic ensembles is trapped inside an optical cavity. We apply a magnetic field gradient $\Delta B$ in the longitudinal direction, which leads to a difference $\Delta E = \hbar r\omega_B$ in the Zeeman splittings of atoms separated by a distance $r$. By modulating the intensity of the drive field at a frequency $r\omega_{B}$ we generate correlated atom pairs in states $m = \pm1$ at distance $r$.
@@ -42,11 +71,6 @@ Yet many objectives in quantum simulation and computation demand more versatile 
 \label{fig:overview}
 \end{figure*}
 
-We realize programmable spin-exchange interactions in an array of atomic ensembles within an optical cavity.  Our scheme, illustrated in Fig.~\ref{fig:overview}, produces a class of spin models described by an effective Hamiltonian
-\begin{equation}
-H_{\text{eff}} = -\sum_{\mu,\nu} J(r_{\mu\nu}) f^+_\mu f^-_\nu + H_q. %q\sum_{\mu} \left(f^z_\mu\right)^2.
-\label{eq:Heff}
-\end{equation} Here, $f^{+(-)}_\mu$ denotes the raising (lowering) operator for the Zeeman spin of atom $\mu$, the distance between atoms is $r_{\mu\nu}$, and $H_q$ represents the quadratic Zeeman energy.  The spin-exchange coupling $J$ arises from a process in which one atom flips its spin down while scattering a photon from a drive field into the cavity and a second atom rescatters this photon to flip its spin up \cite{davis2019photon,davis2020protecting}. We focus on a system of spin-1 atoms initialized in the $m=0$ Zeeman state, where the effect of this ``flip-flop'' interaction is to produce correlated atom pairs in states $m=\pm 1$ \cite{masson2017cavity,davis2019photon,hamley2012spin}.
 
 Whereas the single-mode cavity ordinarily mediates interactions among all sites, we break this all-to-all connectivity by introducing a magnetic field gradient along the cavity axis.  The gradient introduces a difference $\hbar\omega_B$ between the Zeeman splittings on adjacent sites, such that spin-exchange processes are off-resonant for physically separated spins. To controllably reintroduce interactions between ensembles spaced by a distance of $r$ sites, we modulate the intensity of the drive field---and hence the instantaneous spin-exchange coupling $\tilde{J}(t)$—at a frequency $r \omega_B$.  More generally, to obtain a specified set of couplings $J(r)=J^*(-r)$ in Eq. \eqref{eq:Heff}, we set a drive waveform
 \begin{equation}
@@ -59,8 +83,8 @@ We probe the connectivity of interactions by measuring spatial correlations in t
 The dependence of spatial correlations on modulation frequency is shown in Fig.~\ref{fig:sideband_frequency}a.  There, we plot the average correlation $C^\text{pm}(d)
 =\sum_{i} C^\text{pm}_{i, i + d}/{(M - |d|)}$ of sites separated by distance $d$. Plotting $C^\text{pm}(d)$ as a function of modulation frequency $r\omega_B$, for integer values $r$, reveals correlations at distances $d = \pm r$ and $d=0$.  While the correlations at $d=0$ indicate on-site pair creation that is resonant even for a single drive frequency, the correlations at $d=\pm r$ confirm the presence of interactions at the distance set by the modulation frequency.  The interactions are spectrally well resolved as a function of drive frequency [Fig.~\ref{fig:sideband_frequency}a inset], highlighting the precise control of the coupling distance.
 
-\begin{figure}[tbh]
-\includegraphics[width=\columnwidth]{Figures/Figure2.pdf}
+\begin{figure}[p]
+\includegraphics[height=5in]{Figures/Figure2.pdf}
 \caption{\textbf{Pair creation at programmable distance.}  \textbf{a} Correlations $C^{\mathrm{pm}}$ vs modulation frequency $\omega$ and distance. Setting $\omega = r\omega_B$ generates correlations $C^\text{pm}$ at a distance
 $r$.  Inset shows correlations $C^\text{pm}$ appearing only when satisfying a
 resonance condition $\omega = r\omega_B$ for integer $r$.  \textbf{b} Measurements of $c^{xx}$ for sinusoidal modulation at frequency $3\omega_B$ reveal spreading of correlations to integer multiples of the distance $r=3$ after $T$ Bloch periods.
@@ -79,7 +103,7 @@ Engineering the dispersion relation via the drive waveform remarkably allows for
 
 We verify the successful realization of periodic boundary conditions by directly reconstructing the effective geometry of the system from the measured spin correlations $\Cxx_{ij} = \Corr{F^x_i}{F^x_j}$.  Adopting an ansatz that correlations decay as a Gaussian function $\left|\Cxx_{ij}\right|\sim e^{-\abs{\boldsymbol{\rho}_i-\boldsymbol{\rho}_j}^2}$ of distance $\abs{\boldsymbol{\rho}_i-\boldsymbol{\rho}_j}$ in a $D$-dimensional space, we seek a mapping of the array sites to effective coordinates $\boldsymbol{\rho}_i$ that best fit the distances $d_{ij} = \sqrt{-\log |\Cxx_{ij}|}$ inferred from the correlations.  We obtain the coordinates $\boldsymbol{\rho}_i$ by applying metric multidimensional scaling~\cite{torgerson1952multidimensional} to the distance matrix $d_{ij}$.  The result is shown in Fig.~\ref{fig:geometry}a for a system with nearest-neighbor interactions and periodic boundary conditions. In addition to calculating the effective coordinates $\boldsymbol{\rho}_i$, we calculate an inferred coupling matrix $J' = \left(\Cxx\right)^{-1}$.  Coloring the edges between all pairs of sites according to $J'$ corroborates the ring-like coupling graph.
 
-\begin{figure*}[tbh]
+\begin{figure*}[tb]
 \includegraphics[width=\textwidth]{Figures/Figure3.pdf}
 \caption{\textbf{Geometry extracted from correlations.} 
 \textbf{a} Ring, \textbf{b} disconnected chains, \textbf{c} triangular antiferromagnetic ladder, \textbf{d} cylinder with anisotropic sign of interactions, and \textbf{e} M\"obius ladder with oppositely signed interactions along the edge and width.  \textbf{i} Connectivity graphs, with red (blue) bonds indicating ferromagnetic (antiferromagnetic) couplings between sites labeled by position in array.  \textbf{ii} Structure factor (purple circles) measured after $T=2$ Bloch periods is proportional to squared dispersion relation $\chi_{k}^2$ (blue shaded region).  \textbf{iii} Correlations $C^{xx}$.  \textbf{iv} Reconstructed geometries in $D = 3$ dimensions, with Cartesian coordinates $\boldsymbol{\rho}$.  Color and opacity of bonds indicate sign and magnitude of the inferred coupling $J'$.}
@@ -293,6 +317,7 @@ The inverse correlation matrix, also known as the concentration or precision mat
 
 \section*{Extended Data}
 \begin{table}[h]
+\tiny
     \begin{ruledtabular}
     \begin{tabular}{l|c|c|c|c}
         Data set & Magnetic field $B_0$ [G] &  Gradient $\omega_B$ [kHz/site] & Quadratic Zeeman shift $q$ [Hz] & Interaction time $T\tau_B$ [ms] \\
